objects/wkfsl__Facility_Plan__c.object
<CustomObject>
    <fields>
        <fullName>IsDemoData__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDemoData</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkfsl__AvailabilityRequestsSentDate__c</fullName>
        <description>The date that availability requests were sent to employees for this facility plan.</description>
        <label>Availability Requests Sent On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>wkfsl__Capacity_Overide__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override planned occupancy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkfsl__Capacity__c</fullName>
        <label>Planned Occupancy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkfsl__Completion_Date__c</fullName>
        <description>The due date for employees to submit their availability.</description>
        <inlineHelpText>To be assigned shifts, employees must submit availability by the due date.</inlineHelpText>
        <label>Availability Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>wkfsl__Days_of_the_week__c</fullName>
        <label>Work Days</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                    <default>true</default>
                    <label>Monday</label>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkfsl__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>wkfsl__Generate_Shift__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Create shifts at the lowest level of your location hierarchy. For example, create shifts for spaces but not floors and buildings.</inlineHelpText>
        <label>Create shifts for this location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkfsl__Max_Number_Of_Allowed_Employees__c</fullName>
        <inlineHelpText>Limit the number of people arriving during each time interval.</inlineHelpText>
        <label>Occupancy Per Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkfsl__Percentage_Allocation__c</fullName>
        <inlineHelpText>Enter the percentage of the location’s maximum occupancy that your workplace plan allows.</inlineHelpText>
        <label>Reduced Occupancy Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>wkfsl__PlanType__c</fullName>
        <label>Plan Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Managed scheduling</fullName>
                    <default>true</default>
                    <label>Managed scheduling</label>
                </value>
                <value>
                    <fullName>Self-service scheduling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkfsl__Related_Top_Level_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Top Level Territory</label>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipLabel>Facility Plans</relationshipLabel>
        <relationshipName>Related_Territories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkfsl__Service_Territory__c</fullName>
        <label>Service Territory Location</label>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipLabel>Facility Plans</relationshipLabel>
        <relationshipName>Facility_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>wkfsl__Shifts_Were_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shifts Were Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkfsl__Stagger_End_Time__c</fullName>
        <label>Arrival Window End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>wkfsl__Stagger_Start_Time__c</fullName>
        <label>Arrival Window Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>wkfsl__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>wkfsl__Time_Interval__c</fullName>
        <inlineHelpText>Enter the length of each arrival time slot in minutes.</inlineHelpText>
        <label>Arrival Interval</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkfsl__Time_To_Stagger__c</fullName>
        <label>Stagger Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>wkfsl__Timezone__c</fullName>
        <label>Timezone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkfsl__Work_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Work type allows you to set different type of shifts to assign to your employees.</description>
        <inlineHelpText>Assign different type of shifts. Leave blank for default.</inlineHelpText>
        <label>Work Type</label>
        <referenceTo>WorkType</referenceTo>
        <relationshipLabel>Facility Plans</relationshipLabel>
        <relationshipName>Facility_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Facility Plan</label>
    <listViews>
        <fullName>wkfsl__All</fullName>
        <columns>NAME</columns>
        <columns>wkfsl__Time_Interval__c</columns>
        <columns>wkfsl__Generate_Shift__c</columns>
        <columns>wkfsl__Stagger_End_Time__c</columns>
        <columns>wkfsl__Stagger_Start_Time__c</columns>
        <columns>wkfsl__End_Date__c</columns>
        <columns>wkfsl__Percentage_Allocation__c</columns>
        <columns>wkfsl__Service_Territory__c</columns>
        <columns>wkfsl__Shifts_Were_Generated__c</columns>
        <columns>wkfsl__Time_To_Stagger__c</columns>
        <columns>wkfsl__Start_Date__c</columns>
        <columns>wkfsl__Timezone__c</columns>
        <columns>wkfsl__Days_of_the_week__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FP-{000000}</displayFormat>
        <label>Facility Plan</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Facility Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>wkfsl__Completion_Date_Before_Plan_Start</fullName>
        <active>false</active>
        <description>Validates that the availability request due date is before the facility plan’s start date.</description>
        <errorConditionFormula>wkfsl__Start_Date__c  &lt;=  wkfsl__Completion_Date__c</errorConditionFormula>
        <errorDisplayField>wkfsl__Completion_Date__c</errorDisplayField>
        <errorMessage>Enter a due date that’s before the plan start date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>wkfsl__Completion_Date_Not_In_Past</fullName>
        <active>false</active>
        <description>Enter a due date later than today.</description>
        <errorConditionFormula>TODAY() &gt; wkfsl__Completion_Date__c</errorConditionFormula>
        <errorDisplayField>wkfsl__Completion_Date__c</errorDisplayField>
        <errorMessage>Completion date can&apos;t be on a past date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>wkfsl__Max_allowed_employees_must_be_positive</fullName>
        <active>true</active>
        <errorConditionFormula>wkfsl__Max_Number_Of_Allowed_Employees__c &lt; 0</errorConditionFormula>
        <errorMessage>Max number of allowed employees of staggering plan must be a positive number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>wkfsl__Occupancy_Per_Interval_must_be_positive</fullName>
        <active>true</active>
        <description>Occupancy Per Interval must be positive or blank</description>
        <errorConditionFormula>NOT(ISBLANK(wkfsl__Max_Number_Of_Allowed_Employees__c))  &amp;&amp; wkfsl__Max_Number_Of_Allowed_Employees__c  = 0</errorConditionFormula>
        <errorMessage>The Occupancy Per Interval must be above 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>wkfsl__Percentage_Allocation</fullName>
        <active>true</active>
        <description>Percentage_Allocation__c must be between 0 to 100</description>
        <errorConditionFormula>OR(
   wkfsl__Percentage_Allocation__c &gt; 1.0,
   wkfsl__Percentage_Allocation__c &lt; 0.0
)</errorConditionFormula>
        <errorMessage>Percentage Allocation must be between 0 to 100.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>wkfsl__Stagger_Time_Interval</fullName>
        <active>true</active>
        <description>Stagger Time Interval must be positive</description>
        <errorConditionFormula>wkfsl__Time_Interval__c  &lt; 0</errorConditionFormula>
        <errorMessage>Time interval of staggering must be a positive number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>wkfsl__Stagger_plan_completeness</fullName>
        <active>true</active>
        <errorConditionFormula>((ISNULL(wkfsl__Max_Number_Of_Allowed_Employees__c) || ISNULL(wkfsl__Stagger_Start_Time__c) || ISNULL(wkfsl__Stagger_End_Time__c) || ISNULL(wkfsl__Time_Interval__c)))  &amp;&amp; (NOT(ISNULL(wkfsl__Max_Number_Of_Allowed_Employees__c)) || NOT(ISNULL(wkfsl__Stagger_Start_Time__c)) || NOT(ISNULL(wkfsl__Stagger_End_Time__c)) || NOT(ISNULL(wkfsl__Time_Interval__c)))</errorConditionFormula>
        <errorMessage>To stagger arrivals, fill out all the fields. Or, delete the Staggered Arrivals values.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>wkfsl__Stagger_start_after_end</fullName>
        <active>true</active>
        <description>Staggering start time can&apos;t be after end time</description>
        <errorConditionFormula>wkfsl__Stagger_End_Time__c  &lt;=  wkfsl__Stagger_Start_Time__c</errorConditionFormula>
        <errorMessage>Staggering start time can&apos;t be after end time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>wkfsl__Time_Interval_must_be_positive</fullName>
        <active>true</active>
        <description>Time Interval must be positive or blank</description>
        <errorConditionFormula>NOT(ISBLANK(wkfsl__Time_Interval__c))  &amp;&amp; wkfsl__Time_Interval__c  = 0</errorConditionFormula>
        <errorMessage>Time Interval must be above 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>wkfsl__Work_type_should_not_auto_create</fullName>
        <active>true</active>
        <description>Linked work type should not include auto creation of services as this done by executing the facility plan. Otherwise we will end up in duplicated data.</description>
        <errorConditionFormula>NOT(ISBLANK(wkfsl__Work_Type__c)) &amp;&amp;  wkfsl__Work_Type__r.ShouldAutoCreateSvcAppt  = true</errorConditionFormula>
        <errorDisplayField>wkfsl__Work_Type__c</errorDisplayField>
        <errorMessage>Choose another work type. This work type creates service appointments automatically, which causes duplicate shifts.</errorMessage>
    </validationRules>
</CustomObject>